// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> should render correctly 1`] = `
<Navbar
  month={2018-12-17T00:00:00.000Z}
>
  <table
    className="year-interval-header"
  >
    <tbody>
      <tr>
        <PrevInterval
          className=""
          onMouseDown={[Function]}
        >
          <td
            className=""
            onMouseDown={[Function]}
          >
            <Icon
              aria-label="Prev interval"
              name="angle-left"
              type="fa"
            >
              <FontAwesome
                aria-label="Prev interval"
                name="angle-left"
              >
                <span
                  aria-hidden={true}
                  aria-label="Prev interval"
                  className="fa fa-angle-left"
                />
              </FontAwesome>
            </Icon>
          </td>
        </PrevInterval>
        <td>
          <button
            className="navbar-center-button"
            onMouseDown={[Function]}
            type="button"
          >
            December 2018
          </button>
        </td>
        <NextInterval
          className=""
          onMouseDown={[Function]}
        >
          <td
            className=""
            onMouseDown={[Function]}
          >
            <Icon
              aria-label="Next interval"
              name="angle-right"
              type="fa"
            >
              <FontAwesome
                aria-label="Next interval"
                name="angle-right"
              >
                <span
                  aria-hidden={true}
                  aria-label="Next interval"
                  className="fa fa-angle-right"
                />
              </FontAwesome>
            </Icon>
          </td>
        </NextInterval>
      </tr>
    </tbody>
  </table>
</Navbar>
`;

exports[`<Navbar /> should render year navbar variant correctly 1`] = `
<Navbar
  isYear={true}
  month={2018-12-17T00:00:00.000Z}
>
  <table
    className="year-interval-header"
  >
    <tbody>
      <tr>
        <PrevInterval
          className=""
          onMouseDown={[Function]}
        >
          <td
            className=""
            onMouseDown={[Function]}
          >
            <Icon
              aria-label="Prev interval"
              name="angle-left"
              type="fa"
            >
              <FontAwesome
                aria-label="Prev interval"
                name="angle-left"
              >
                <span
                  aria-hidden={true}
                  aria-label="Prev interval"
                  className="fa fa-angle-left"
                />
              </FontAwesome>
            </Icon>
          </td>
        </PrevInterval>
        <td>
          <button
            className="navbar-center-button"
            onClick={[Function]}
            type="button"
          >
            2018
          </button>
        </td>
        <NextInterval
          className=""
          onMouseDown={[Function]}
        >
          <td
            className=""
            onMouseDown={[Function]}
          >
            <Icon
              aria-label="Next interval"
              name="angle-right"
              type="fa"
            >
              <FontAwesome
                aria-label="Next interval"
                name="angle-right"
              >
                <span
                  aria-hidden={true}
                  aria-label="Next interval"
                  className="fa fa-angle-right"
                />
              </FontAwesome>
            </Icon>
          </td>
        </NextInterval>
      </tr>
    </tbody>
  </table>
</Navbar>
`;
